Cleanup: remove debug files and fix select overflow

--- a/src/popup.html
+++ b/src/popup.html
@@ -60,10 +60,6 @@
         <button id="open-nlm-btn" class="btn btn-secondary">🔗 打开 NotebookLM</button>
         <button id="copy-btn" class="btn btn-secondary">📋 复制内容</button>
       </div>
-      <div class="btn-row">
-        <button id="dump-logs-btn" class="btn btn-secondary">🧾 复制导入日志</button>
-        <button id="dump-reqs-btn" class="btn btn-secondary">🛰️ 复制请求日志</button>
-      </div>
     </div>
 
     <!-- 状态消息 -->
@@ -91,7 +87,13 @@
     <details class="help">
       <summary>❓ 使用说明</summary>
       <div class="help-content">
-        <p><strong>提示：</strong>如果导入失败，点「复制导入日志」把内容发我，我能快速定位是点错按钮/找错输入框/弹窗结构变化。</p>
+        <ol>
+          <li>在任意网页点击扩展图标</li>
+          <li>预览提取的内容</li>
+          <li>选择目标笔记本</li>
+          <li>点击「一键导入」</li>
+        </ol>
+        <p><strong>注意：</strong>需要先登录 Google 账号</p>
       </div>
     </details>
   </div>
